catkin_ws/logs/backend/build.make.047.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:455:9: error: redeclaration of ‘int i’
     int i;
         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:452:12: error: ‘int i’ previously declared here
    for(int i = 0; i < lcRandomMatching; ++i,  ++frames)
            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:467:6: error: ‘id’ was not declared in this scope
      id = rand() % keyFrames.size();  
      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:505:37: error: ‘id’ was not declared in this scope
     // matching
                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:455:9: warning: unused variable ‘i’ [-Wunused-variable]
     int i;
         ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
